[package]
name = "sutom_front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-logger = "0.3.0"
dioxus-web = "0.3.1"
config = "0.13.3"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"] }
serde = "1.0.159"
async-trait = "0.1.68"
